[package]
name = "brewcode"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.4.0"
wgpu_glyph = "0.6.0"
winit = "0.20.0-alpha5" # TODO: Update once out of alpha
zerocopy = "0.2.8"